# private-dependencies-examples

./: README.md
cabal-hooks-demo/: Makefile  README.md
testing-text/: CHANGELOG.md  testing-text.cabal
testing-text/bench/: Main.hs  MainNFData.hs
testing-text/test/: Main.hs
