cabal-version:      3.0
name:               testing-text
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Matthew Pickering
maintainer:         matthewtpickering@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

test-suite testing-text-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:    base ^>=4.18.0.0, QuickCheck, tasty-quickcheck, tasty
    private-build-depends: TEXT1 with (text == 1.2.*), TEXT2 with (text == 2.*)

benchmark testing-text-benchmarks
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   bench/
    main-is:          Main.hs
    build-depends:    base ^>=4.18.0.0, tasty-bench, tasty, deepseq
    private-build-depends: TEXT1 with (text == 1.2.*), TEXT2 with (text == 2.*)

benchmark testing-text-benchmarks-nfdata
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   bench/
    main-is:          MainNFData.hs
    build-depends:    base ^>=4.18.0.0, tasty-bench, tasty, deepseq
    private-build-depends: TEXT1 with (text == 1.2.*, pretty, containers, template-haskell, bytestring, binary, deepseq), TEXT2 with (text == 2.*, pretty, template-haskell, bytestring, binary, containers, deepseq)
